force-app/main/default/objects/ProfessionalProjects__c/ProfessionalProjects__c.object-meta.xml
<CustomObject>
    <label>Professional Projects</label>
    <nameField>
        <displayFormat>PROJ-{00}</displayFormat>
        <label>Professional Projects Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>