force-app/main/default/objects/ProfessionalProjects__c/fields/ProjectDescription__c.field-meta.xml
<CustomField>
    <fullName>ProjectDescription__c</fullName>
    <label>Project Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>