force-app/main/default/objects/ProfessionalProjects__c/fields/ProjectEndDate__c.field-meta.xml
<CustomField>
    <fullName>ProjectEndDate__c</fullName>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>