force-app/main/default/objects/ProfessionalProjects__c/fields/ShowProject__c.field-meta.xml
<CustomField>
    <fullName>ShowProject__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Project</label>
    <type>Checkbox</type>
</CustomField>